[package]
name = "w5500"
version = "0.3.0"
authors = ["Michael Watzko <michael@watzko.de>", ""]
repository = "https://github.com/kellerkindt/w5500.git"
description = "W5500 IoT Controller implementation."
keywords = ["embedded", "w5500", "iot", "arm", "embedded-hal-driver"]
categories = ["embedded", "hardware-support", "no-std", "network-programming"]
license = "MIT OR Apache-2.0"
readme = "README.md"
edition = "2018"

[dependencies]
embedded-hal = "0.2.4"
bit_field = "0.10.1"
no-std-net = "0.4.0"
num_enum = { version = "0.5.1", default-features = false }
embedded-nal = "0.1.0"
nb = "0.1"
