[package]
name = "w5500"
version = "0.3.0"
authors = ["Michael Watzko <michael@watzko.de>", "Jonah Dahlquist <hi@jonah.name>"]
repository = "https://github.com/kellerkindt/w5500.git"
description = "W5500 IoT Controller implementation. Currently UDP sending and receiving is working. WIP"
keywords = ["embedded", "w5500", "iot", "arm", "embedded-hal-driver"]
categories = ["embedded", "hardware-support", "no-std", "network-programming"]
license = "MIT OR Apache-2.0"
readme = "README.md"
edition = "2018"

[dependencies]
byteorder = { version = "1.3.4", default-features = false }
embedded-hal = "0.2.4"
embedded-nal = { git = "https://github.com/rust-embedded-community/embedded-nal", rev = "0bac1997397707cf44663644752eeb1f4b0a2978" }
bit_field = "0.10.1"
nb = "1.0.0"
