[package]
name = "w5500"
version = "0.3.0"
authors = ["Michael Watzko <michael@watzko.de>", "Jonah Dahlquist <hi@jonah.name>"]
repository = "https://github.com/kellerkindt/w5500.git"
description = "W5500 IoT Controller implementation. Currently UDP sending and receiving is working. WIP"
keywords = ["embedded", "w5500", "iot", "arm", "embedded-hal-driver"]
categories = ["embedded", "hardware-support", "no-std", "network-programming"]
license = "MIT OR Apache-2.0"
readme = "README.md"
edition = "2018"

[dependencies]
byteorder = { version = "1.3.4", default-features = false }
embedded-hal = "0.2.4"
embedded-nal = "0.5.0"
bit_field = "0.10.1"
nb = "1.0.0"

[features]
no-chip-version-assertion = []